# fastapi_logic_snippets

generate_form_code_on_template/: pyproject.toml
generate_form_code_on_template/src/: main.py
generate_form_code_on_template/src/templates/: home.html
